--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage": "https://TusharGeek.github.io/GJCEIWebsite",
+{
+  "homepage": "https://TusharGeek.github.io/GJCEIWebsite",
   "name": "slider-intro",
   "private": true,
   "version": "0.0.0",
@@ -16,8 +17,6 @@
     "@fontsource/outfit": "^4.5.10",
     "@mantine/core": "^5.9.0",
     "@mantine/hooks": "^5.9.0",
-    "@mui/icons-material": "^5.10.16",
-    "@mui/styled-engine": "^5.10.16",
     "@tabler/icons": "^1.115.0",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
