added legacy browser support

--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-legacy": "^3.0.0",
     "@vitejs/plugin-react": "^2.2.0",
     "gh-pages": "^4.0.0",
+    "terser": "^5.16.1",
     "vite": "^3.2.3"
   }
 }
